--- a/nlw-connect/react/web/package.json
+++ b/nlw-connect/react/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "postcss": "^8.5.3",
@@ -18,6 +19,7 @@
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
