--- a/nlw-connect/react/web/.vscode/settings.json
+++ b/nlw-connect/react/web/.vscode/settings.json
@@ -9,6 +9,7 @@
         "editor.defaultFormatter": "biomejs.biome"
     },
     "editor.codeActionsOnSave": {
-        "source.fixAll.biome": "explicit"
-  }
-  }
+        "source.organizeImports.biome": "explicit"
+    },
+    "editor.formatOnSave": true
+}
