--- a/nlw-connect/react/web/biome.json
+++ b/nlw-connect/react/web/biome.json
@@ -11,7 +11,7 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "2"
 	},
 	"organizeImports": {
 		"enabled": true
